# pba-workshop-dapp

contracts/: hardhat.config.ts  package-lock.json  package.json
contracts/contracts/: NotReallyACrossChainToken.sol
contracts/contracts/ink_library/: Cargo.toml  lib.rs
contracts/ignition/deployments/chain-420420422/: deployed_addresses.json  journal.jsonl
contracts/ignition/deployments/chain-420420422/artifacts/: NotReallyACrossChainTokenModule#NotReallyACrossChainToken.dbg.json  NotReallyACrossChainTokenModule#NotReallyACrossChainToken.json
contracts/ignition/modules/: NotReallyACrossChainToken.ts
contracts/test/: MyToken.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/contracts/: index.ts
contracts/typechain-types/contracts/NotReallyACrossChainToken.sol/: ICrossChainTransfers.ts  IXcm.ts  NotReallyACrossChainToken.ts  index.ts
contracts/typechain-types/factories/contracts/: index.ts
contracts/typechain-types/factories/contracts/NotReallyACrossChainToken.sol/: ICrossChainTransfers__factory.ts  IXcm__factory.ts  NotReallyACrossChainToken__factory.ts  index.ts
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  generated.ts
frontend/src/components/: ContractData.tsx  Mint.tsx  Redeem.tsx
frontend/src/utils/: convert-eth-to-ss58.ts
